2019-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sfw.c (ReadSFWImage): Make SFW static data completely
	const.

	* coders/ps3.c: Make PS3 static data completely const.

	* coders/pict.c: Make PICT static data completely const.

	* magick/error.c (ThrowException, ThrowLoggedException): Handle
	the case where some passed character strings refer to existing
	exception character strings.  Fixes SourceForge issue #603
	"heap-use-after-free in function ThrowLoggedException of
	magick/error.c".
	(CatchException): Restructure so there is one return point.

	* coders/miff.c (ImportRLEPixels): Fix heap overflow caused by a
	typo in the code.  Also fix undefined behavior caused by large
	left shifts of an unsigned char.  Fixes SourceForge issue #608
	"heap-buffer-overflow in ImportRLEPixels of coders/miff.c.

2019-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix subrange/scene handling in
	'ping' mode so it is like the other formats.  Only the first frame
	was being enumerated while in 'ping' mode.

2019-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update news.

	* magick/utility.c (ExpandFilenames): Only expand '@filename' to a
	list of arguments read from 'filename' if the path '@filename'
	does not exist.  This fix is made based on an email posting to the
	'graphicsmagick-help' mailing list at SourceForge by "Test User"
	on Tue, 7 May 2019.

2019-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c: Reorder initialization of colorspace tables
	for a possible performance improvement.

	* magick/fx.c (WaveImage): Use float for sin map.

	* configure.ac: Test for float versions of math functions.

	* magick/gem.c (GenerateDifferentialNoise): Use float versions of
	math functions when available.

2019-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/INSTALL-unix.rst: Expanded configure documentation for