@@ -38,6 +38,12 @@
 <p>2019-05-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/webp.c (RegisterWEBPImage): Make more data const.</li>
+<li>coders/svg.c (RegisterSVGImage): Reduce BSS size.</li>
+<li>coders/miff.c (RegisterMIFFImage): Fix version reporting.</li>
+<li>coders/ttf.c (RegisterTTFImage): Fixed reporting of FreeType
+version.</li>
+<li>coders/tiff.c (RegisterTIFFImage): Reduce BSS size.</li>
 <li>coders/sfw.c (ReadSFWImage): Make SFW static data completely
 const.</li>
 <li>coders/ps3.c: Make PS3 static data completely const.</li>
